--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poiret+One&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poiret+One&display=swap");
 
 html {
   box-sizing: border-box;
@@ -65,7 +65,7 @@ button:hover {
   filter: brightness(110%);
 }
 button:active {
-  transform: translate(0,0.3rem);
+  transform: translate(0, 0.3rem);
   box-shadow: 0 0.1rem rgba(255, 255, 255, 0.65);
 }
 .twitter-button:hover {
@@ -74,10 +74,26 @@ button:active {
 .fa-twitter {
   font-size: 1.5rem;
 }
-
+/* Loader */
+.loader {
+  border: 16px solid #f3f3f3;
+  border-radius: 50%;
+  border-top: 16px solid #333;
+  width: 120px;
+  height: 120px;
+  animation: spin 2s linear infinite;
+}
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
 /* Media Query: Tablet or Smaller */
 @media screen and (max-width: 1000px) {
-  .quote-container{
+  .quote-container {
     margin: auto 10px;
   }
   .quote-text {
